# learnIMU

./: .gitignore  README.md
src/gnns_serial/: CMakeLists.txt  package.xml
src/imu_serial/: CMakeLists.txt  package.xml
src/imu_serial/include/imu_serial/: imu_serial_node.h  serial_boost.h
src/imu_serial/src/: imu_serial.cpp  imu_serial_node.cpp  serial_boost.cpp
src/interfaces/: CMakeLists.txt  package.xml
